<resources>
    <string name="app_name">JetPackDemo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_camera">Cameras</string>
    <string name="tab_album">Album</string>
    <string name="tab_setting">Settings</string>
    <string name="tab_info">Info</string>
    <string name="tab_camera_title" translatable="false">@string/app_name</string>
    <string name="connect_tips1">Confirm Device Opened</string>
    <string name="connect_tips2">Please go to the mobile settings to connect to the device Wi-Fi</string>
    <string name="name_txt">NAME:&#160;</string>
    <string name="initial_name" translatable="false">VIA_M500_XXX</string>
    <string name="initial_pwd" translatable="false">12345678</string>
    <string name="pwd_txt">PASSWORD:&#160;</string>
    <string name="ssid_content" translatable="false">SSID:&#160;VIA M500 800-SN 143583</string>
    <string name="connecting_tip">Please wait while connecting to the device.\n&#8230;</string>
    <string name="cam_list_tip">Select a camera to calibrate</string>
    <string name="calibration_mode">Calibration Mode</string>
    <string name="calibration_mode_tip">Select a mode to calibrate the \n%1$s</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="express">Express</string>
    <string name="custom">Custom</string>
    <string name="cali_title">Camera Calibration %1$s Mode</string>
    <string name="camera_calibration">Camera Calibration</string>
    <string name="cali_error">Calibration failed! Please try again.</string>
    <string name="custom_cali_tips1">Position the L, M, R circles\nover the corresponding markers.</string>
    <string name="custom_cali_tips2">Position the L, M, R circles\nover the corresponding marker for each respective boundary line.</string>
    <string name="express_cali_tips">Adjust the camera so that the virtual target aligns to the actual pattern</string>
    <string name="dms_cali_tips">Adjust the camera so that the driver\'s face is within the target and it turns green.</string>
    <string name="cali_success">Calibration success</string>
    <string name="camera_height">Camera Height</string>
    <string name="boundary">Boundaries</string>
    <string name="set_boundary_tips">Set the distance of the %1$s boundaries</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="empty_boundary">Please select 1st boundary</string>
    <string name="first_boundary">1st boundary</string>
    <string name="second_boundary">2nd boundary</string>
    <string name="max_speed_alert">Maximum Speed Alert</string>
    <string name="seatbelt">Seatbelt Sensor</string>
    <string name="tire_dimension">Tire Dimension</string>
    <string name="reset">Reset</string>
    <string name="connected_safe_belt">Connected</string>
    <string name="unconnected_safe_belt">Unconnected</string>
    <string name="reset_confirm">Are you sure you want to reset?</string>
    <string name="format_sd_confirm">Are you sure you want to reformat?</string>
    <string name="reset_success">Reset succeed</string>
    <string name="modify_success">Modify succeed</string>
    <string name="invalid_speed">Please input speed</string>
    <string name="invalid_tire_dimension">Please input tire dimension</string>
    <string name="version">Version</string>
    <string name="apk_version" translatable="false">%1$s</string>
    <string name="undefined">Undefined</string>
    <string name="alert_volume">Volume</string>
    <string name="click_to_exit">Click again to exit</string>
    <string name="device_version">Firmware Version</string>
    <string name="mcu_version">MCU Version</string>
    <string name="accessories">Speed Sensor</string>
    <string name="copyright" translatable="false">Copyright (c) 2020 VIA Technologies, Inc.</string>
    <string name="driver_cam">Driver Camera</string>
    <string name="front_cam">Front Camera</string>
    <string name="rear_cam">Rear Camera</string>
    <string name="calibrated">Calibrated</string>
    <string name="uncalibrated">Uncalibrated</string>
    <string name="album_type_device">Device</string>
    <string name="album_type_local">Local</string>
    <string name="please_open_storage_permission">Storage permission refused, album is disabled.</string>
    <string name="wait">Please wait for the download task to complete</string>
    <string name="recalibrate">Recalibrate</string>
    <string name="select">Select</string>
    <string name="no_file">File list is empty</string>
    <string name="download_file">Download to local</string>
    <string name="confirm_download">Are you sure you want to download the\nselected files to your mobile device?</string>
    <string name="confirm_delete">Are you sure you want to delete the\nselected files from your mobile device?</string>
    <string name="no_space">Insufficient MicroSD card space</string>
    <string name="msg_download_success">Download successful, Please check it in "Album/Local"</string>
    <string name="boundary_lines">Boundary Lines</string>
    <string name="boundary_line">Boundary Line</string>
    <string name="express_cali">EXPRESS CALIBRATION</string>
    <string name="custom_cali">CUSTOM CALIBRATION</string>
    <string name="download_to_local">Download to local</string>
    <string name="month_day">%1$d/%2$d</string>
    <string name="file_corrupt">File is corrupt and cannot be played</string>
    <string name="forbid_seek">Recording in progress, dragging invalid</string>
    <string name="sd_card_miss">MicroSD card error</string>
    <string name="sd_card_in">MicroSD card normal</string>
    <string name="record_stop">Download to local successful</string>
    <string name="download_failed">Download failed</string>
    <string name="file_exist">File exist</string>
    <string name="delete_ok">The files have been deleted</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dialog_confirm">Agree</string>
    <string name="dialog_cancel">Deny</string>
    <string name="about_policy">
        <u>User Agreement and Privacy Policy</u>
    </string>
    <string name="unit">Units</string>
    <string name="metric">Metric</string>
    <string name="british">Imperial</string>
    <string name="us">US Customary</string>
    <string name="ota_error">Upgrade error, please check network or device</string>
    <string name="upgrade_now">Upgrade now?</string>
    <string name="device_upgrade_now">New firmware version available for \n\"%1$s\".\nPress \"OK\" to update the system.</string>
    <string name="new_version_available">New Version Available</string>
    <string name="ota_ing">Device Upgrading</string>
    <string name="radar_distance">Radar Alert Distance</string>
    <string name="invalid_radar_distance">Please input %1$s to %2$s</string>
    <string name="device_wifi">Available Systems</string>
    <string name="network">NETWORKS</string>
    <string name="input_psd_tip">Enter the password for \"%1$s\"</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <string name="enter_psd">Enter Password</string>
    <string name="test">Test</string>
    <string name="wait_device_upgrade">Device is upgrading, please wait</string>
    <string name="wifi_tips">Please check:\n1) The target device is turned on\n2) Wi-Fi is enabled on the phone\n3) Location services/access is enabled on the phone</string>
    <string name="invalid_psd_length">Password length must between 8 to 16</string>
    <string name="update">Update</string>
    <string name="download_error">DOWNLOAD_ERROR</string>
    <string name="writeflash_error">WRITEFLASH_ERROR</string>
    <string name="filecrc_error">FILECRC_ERROR</string>
    <string name="isupgrading_error">ISUPGRADING_ERROR</string>
    <string name="system_error">SYSTEM_ERROR</string>
    <string name="battery_no_enough">BATTERY_NOT_ENOUGH</string>
    <string name="no_sdcard">No MicroSD card</string>
    <string name="not_enough_space">NOT_ENOUGH_SPACE </string>
    <string name="time_out">Time out！</string>
    <string name="close">Close</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="right_cam">Right Camera</string>
    <string name="downloading_firmware">Downloading New Firmware (%1$d%%)</string>
    <string name="download_complete">Download Complete!</string>
    <string name="take_photo">Take Photo</string>
    <string name="redo">Redo</string>
    <string name="net_disconnect">Upload failed, please check network!</string>
    <string name="upload_ok">Upload successful</string>
    <string name="uploading">Uploading</string>
    <string name="wifi_name">Wi-Fi Name</string>
    <string name="wifi_psd">Wi-Fi Password</string>
    <string name="wifi_info">Wi-Fi Info</string>
    <string name="wifi_name_empty">Wi-Fi name can not be empty!</string>
    <string name="psd_too_short">Password length can not less than 8 characters</string>
    <string name="psd_too_long">Password length can not longer than 16 characters</string>
    <string name="wifi_name_too_long">Wi-Fi name length can not longer than 16 characters</string>
    <string name="invalid_face">Driver\'s face not in the target</string>
    <string name="invalid_device_version">OTA upgrade only supports device version 1.0.0 and above</string>
    <string name="one_boundary">Only one boundary can be selected</string>
    <string name="two_boundary">Must select two boundary</string>
    <string name="confirm">Confirm</string>
    <string name="need_check_front">Need calibrate %1$s first</string>
    <string name="boundary_count">Boundary Count</string>
    <string name="front_warning_alert_audio">Front Warning Alerts</string>
    <string name="left_warning_alert_audio">Left Warning Alerts</string>
    <string name="rear_warning_alert_audio">Rear Warning Alerts</string>
    <string name="right_warning_alert_audio">Right Warning Alerts</string>
    <string name="warning_alert_type">Warning Alert Type</string>
    <string name="critical_alert_type">Critical Alert Type</string>
    <string name="voice">Voice</string>
    <string name="sound">Sound</string>
    <string name="firmware_available">Firmware %1$s Available</string>
    <string name="download_now">New firmware version %1$s available.\nPress \"OK\" to download to your phone.</string>
    <string name="dms">Driver Monitoring</string>
    <string name="distracted_driving_alert">Distracted Driving Alert</string>
    <string name="distracted_driving_audio_alert">Distracted Driving Audio Alert</string>
    <string name="fatigue_audio_alert">Driver Fatigue Alert</string>
    <string name="driver_fatigue_audio_alert">Driver Fatigue Audio Alert</string>
    <string name="phone_usage_alert">Phone Usage Alert</string>
    <string name="phone_usage_audio_alert">Phone Usage Audio Alert</string>
    <string name="smoking_alert">Smoking Alert</string>
    <string name="smoking_audio_alert">Smoking Audio Alert</string>
    <string name="left_cam">Left Camera</string>
    <string name="boundary_count_tip">Changing the count of boundaries will reset\nthe calibration information of other cameras</string>
    <string name="reset_calibration">Reset Calibration</string>
    <string name="dmod">People Detection</string>
    <string name="sys_lang">System Language</string>
    <string name="en_us" translatable="false">English</string>
    <string name="zh_cn" translatable="false">简体中文</string>
    <string name="zh_tw" translatable="false">繁體中文</string>
    <string name="ja_jp" translatable="false">日本語</string>
    <string name="connect">Connect</string>
    <string name="gsensor_cali" translatable="false">Gravity Calibration</string>
    <string name="wifi_mode">Wi-Fi Mode</string>
</resources>